# AI_BS

./: .claude.md  .gitignore  ANLEITUNG.md  ARCHITECTURE_PROPOSAL.md  BUGFIX_5ZONE_SUMMARY.md  CHANGELOG.md  CHANGELOG_2025_11_12.md  ERSTE_SCHRITTE.md  FERTIG.md  ISSUE_PEOPLE_CRASH.md  LICENSE  LINUX_TEST_RESULTS.md  PLAUSIBILITAETS_ANALYSE.md  README.md  ROADMAP_NEXT_SESSION.md  ROOTCAUSE_RESIDENTIAL_CRASH.md  SCHNELLSTART_WINDOWS.bat  SESSION_SUMMARY_2025-11-13_PHASE3.md  SIMULATION_CRASH_ANALYSIS.md  START_SIMULATION.bat  START_UI.bat  START_UI.ps1  SYSTEM_DOKUMENTATION.md  check_sql.py  create_minimal_test.py  debug_simulation.py  fix_5zone_idf.py  pyproject.toml  requirements.txt  setup_linux.sh  setup_python_env.sh  setup_windows.ps1  test_5zone_workflow.py  test_eplus_stdout.py  test_example_based_hvac.py  test_full_simulation_hvactemplate.py  test_hvac_thermostat_fix.py  test_hvactemplate_fix.py  test_manual_simulation.py  test_minimal_idf.py  (+13 more)
0_Setup/: LINUX_README.md  install_dependencies.sh  requirements.txt  setup_windows.bat
beispiele/: einfache_simulation.py  energieausweis_5zone_test.py  energieausweis_workflow.py  run_simulation_test.py  test_native_internal_loads.py
config/: default_config.yaml
core/: building_model.py  climate_data.py  config.py  materialien.py  simulation_config.py
docs/: 01_WEB_UI_DOKUMENTATION.md  02_CORE_MODULE_DOKUMENTATION.md  03_FEATURES_DOKUMENTATION.md  04_DATENFLUSS_DOKUMENTATION.md  05_IDF_STRUKTUR_DOKUMENTATION.md  06_SIMULATION_DOKUMENTATION.md  ARCHITECTURE.md  GETTING_STARTED.md  IDF_BEST_PRACTICES.md  README.md  VISION_ERGEBNISSE_TABS.md
examples/: 01_simple_box_simulation.py  (+2 more)
(+90 files in other folders)
